Fairly polished portal page

--- a/app/assets/stylesheets/allstaff/pages/_select.scss
+++ b/app/assets/stylesheets/allstaff/pages/_select.scss
@@ -83,7 +83,8 @@
     button {
       background-color: #2F5EA7;
       display: block;
-      font-size: 2rem;
+      font-size: 4rem;
+      font-weight: lighter;
       margin: 0 auto;
     }
   }
