Change button copy

--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -80,7 +80,7 @@
     </ul>
 
     <p class="action">Want to stay up to date with the latest job offerings?</p>
-    <button>Join Now!</button>
+    <button>Submit Your Resume!</button>
   </div>
 </main>
 
