--- a/app/views/allstaff/shared/_header.html.erb
+++ b/app/views/allstaff/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <ul class="title-area">
     <li class="name">
       <h1>
-        <%= link_to allstaff_home_path do %>
+        <%= link_to allstaff_select_path do %>
           <%= image_tag "logos/SelectStaffingMenu.png" %>
         <% end %>
       </h1>
