--- a/app/assets/stylesheets/allstaff/pages/_portal.scss
+++ b/app/assets/stylesheets/allstaff/pages/_portal.scss
@@ -31,6 +31,22 @@
           font-size: 2rem;
           margin: 1rem 0;
           text-align: center;
+          &.text-box {
+            box-shadow: inset 0 0 10px $iron;
+            cursor: pointer;
+            display: block;
+            height: 4rem;
+            margin: 1rem auto;
+            position: relative;
+            width: 90%;
+            i {
+              height: 2rem;
+              margin-top: -1rem;
+              position: absolute;
+              right: 1rem;
+              top: 50%;
+            }
+          }
         }
       }
     }
@@ -48,6 +64,11 @@
       padding: 2rem;
       text-align: center;
       width: 100%;
+      .sign-up {
+        color: #2F5EA7;
+        cursor: pointer;
+        border-bottom: 1px solid #2F5EA7;
+      }
     }
     button {
       background-color: #2F5EA7;
