--- a/app/views/allstaff/select.html.erb
+++ b/app/views/allstaff/select.html.erb
@@ -80,8 +80,10 @@
     </ul>
 
     <p class="action">Want to stay up to date with the latest job offerings?</p>
-    <button>Submit Your Resume!</button>
+    <button id="modal-button">Submit Your Resume!</button>
   </div>
 </main>
 
 <%= render partial: "allstaff/shared/footer" %>
+
+<%= render partial: "allstaff/shared/modal" %>
