--- a/app/views/allstaff/portal.html.erb
+++ b/app/views/allstaff/portal.html.erb
@@ -19,7 +19,7 @@
   <section class="application">
     <div class="prompt">
       Are you looking for jobs? <span class="sign-up">Sign up with us</span> and recieve a weekly personalized
-      email full of employment opportunities
+      email full of employment opportunities.
     </div>
     <button id="modal-button">Submit Your Resume Now!</button>
     <div class="jobs">
