--- a/app/views/allstaff/shared/_modal.html.erb
+++ b/app/views/allstaff/shared/_modal.html.erb
@@ -1,7 +1,7 @@
 <div id="modal">
   <div class="box">
     <button id="modal-hide"><%= icon('times') %></button>
-    <p>Submit your resume here to get updates about exciting new employment opportunites.</p>
+    <p>Submit your resume to have us match you with great career opportunities.</p>
     <div class="text-box"><%= icon('file-text-o') %></div>
   </div>
 </div>
