Add slide ins for page loads

--- a/app/assets/stylesheets/global/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/global/foundation_and_overrides.scss
@@ -152,10 +152,10 @@ $body-font-style: normal;
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-$small-breakpoint:  64em;
-$medium-breakpoint: 102.4em;
-$large-breakpoint:  144em;
-$xlarge-breakpoint: 192em;
+// $small-breakpoint:  64em;
+// $medium-breakpoint: 102.4em;
+// $large-breakpoint:  144em;
+// $xlarge-breakpoint: 192em;
 
 // $small-range:   (0, $small-breakpoint);
 // $medium-range:  ($small-breakpoint  + em-calc(1), $medium-breakpoint);
