--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<nav>
+<nav data-sr="enter left move 10rem over 1.0s">
   <div class="logo-container">
     <%= link_to "#" do %>
       <h1 class="logo">C&B</h1>
