--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,9 +1,9 @@
 <div class="company-heading">
-  <h2 class="logo">[C&B]</h2>
-  <p class="name">
+  <h2 class="logo" data-sr="enter left move <%= @fadeDistance %> over <%= @fadeTime %>">[C&B]</h2>
+  <p class="name" data-sr="enter top move <%= @fadeDistance %> over <%= @fadeTime %>">
     <span class="large-text">Crook</span><br>
     <span class="small-text">and Baker</span>
   </p>
-  <p class="agency">Digital Consulting</p>
+  <p class="agency" data-sr="enter right move <%= @fadeDistance %> over <%= @fadeTime %>">Digital Consulting</p>
   <%= link_to "Our Services", "#", class: "btn-services" %>
 </div>
