--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,5 +1,5 @@
 <nav>
-  <div class="logo-container">
+  <div class="logo-container" data-sr="enter left move 0 over <%= @fadeTime %>">
     <%= link_to "#" do %>
       <h1 class="logo">C&B</h1>
     <% end %>
