--- a/app/views/shared/_tile.html.erb
+++ b/app/views/shared/_tile.html.erb
@@ -1,5 +1,6 @@
-<div class="background">
-</div>
-<main class="content">
-  <%= yield %>
+<main>
+  <div class="background"></div>
+  <div class="content">
+    <%= yield %>
+  </div>
 </main>
