--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -1,32 +1,41 @@
-.background {
-  background-image: image-url('SkylineBlack2.jpg');
-  background-position: center 25%;
-  background-size: cover;
-  filter: brightness(0.8);
+main {
   height: 100%;
   left: 0;
+  overflow: hidden;
   position: absolute;
-  top: $base-page-spacing;
+  top: 0;
   width: 100%;
   z-index: -1;
-}
-.content {
-  height: 100%;
-  left: 0%;
-  position: absolute;
-  top: $base-page-spacing;
-  width: 100%;
-}
-
-@media #{$large-up} {
   .background {
+    background-image: image-url('SkylineBlack2.jpg');
+    background-position: center 25%;
+    background-size: cover;
+    filter: brightness(0.8);
     height: 100%;
-    top: 0;
+    left: 0;
+    position: absolute;
+    top: $base-page-spacing;
+    width: 100%;
   }
   .content {
     height: 100%;
-    left: 20%;
+    left: 0;
+    position: absolute;
     top: 0;
-    width: 80%;
+    width: 100%;
+  }
+}
+
+@media #{$large-up} {
+  main {
+    top: 0;
+    .background {
+      height: 100%;
+      top: 0;
+    }
+    .content {
+      left: 20%;
+      width: 80%;
+    }
   }
 }
