--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,8 +1,10 @@
 <div class="company-heading">
   <h2 class="logo" data-sr="enter left move <%= @fadeDistance %> over <%= @fadeTime %>">[C&B]</h2>
   <p class="name" data-sr="enter top move <%= @fadeDistance %> over <%= @fadeTime %>">
-    <span class="large-text">Crook</span><br>
-    <span class="small-text">and Baker</span>
+    <span class="slogan">
+      $wag Money.<br>
+      Disruptive Ideas.
+    </span>
   </p>
   <p class="agency" data-sr="enter right move <%= @fadeDistance %> over <%= @fadeTime %>">Digital Consulting</p>
   <%= link_to "Our Services", "#", class: "btn-services" %>
