--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -14,7 +14,7 @@ main {
     height: 100%;
     left: 0;
     position: absolute;
-    top: $base-page-spacing;
+    top: 0;
     width: 100%;
   }
   .content {
