--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -6,6 +6,8 @@
       Disruptive Ideas.
     </span>
   </p>
-  <p class="agency" data-sr="enter right move <%= @fadeDistance %> over <%= @fadeTime %>">Digital Consulting</p>
+  <p class="agency" data-sr="enter right move <%= @fadeDistance %> over <%= @fadeTime %>">
+    We are storytellers.
+  </p>
   <%= link_to "Our Services", "#", class: "btn-services" %>
 </div>
