Update home page

--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="company-heading">
-  <h2 class="logo" data-sr="enter left move <%= @fadeDistance %> over <%= @fadeTime %>">[C&B]</h2>
+  <h2 class="logo" data-sr="enter left move <%= @fadeDistance %> over <%= @fadeTime %>"></h2>
   <p class="name" data-sr="enter top move <%= @fadeDistance %> over <%= @fadeTime %>">
     <span class="slogan">
       $wag Money.<br>
