--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,13 +1,6 @@
 <div class="company-heading">
-  <h2 class="logo" data-sr="enter left move <%= @fadeDistance %> over <%= @fadeTime %>"></h2>
-  <p class="name" data-sr="enter top move <%= @fadeDistance %> over <%= @fadeTime %>">
-    <span class="slogan">
-      $wag Money.<br>
-      Disruptive Ideas.
-    </span>
+  <h2 class="name" data-sr="enter left move <%= @fadeDistance %> over <%= @fadeTime %>">Crook & Baker</h2>
+  <p class="slogan" data-sr="enter right move <%= @fadeDistance %> over <%= @fadeTime %>">
+    We Know Digital
   </p>
-  <p class="agency" data-sr="enter right move <%= @fadeDistance %> over <%= @fadeTime %>">
-    We are storytellers.
-  </p>
-  <%= link_to "Our Services", "#", class: "btn-services" %>
 </div>
