--- a/app/views/shared/_tile.html.erb
+++ b/app/views/shared/_tile.html.erb
@@ -1,5 +1,5 @@
 <main>
-  <div class="background"></div>
+  <div class="background" data-video="/assets/slowBoat.mp4"></div>
   <div class="content">
     <%= yield %>
   </div>
