--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,6 +1,5 @@
 <div class="company-heading">
-  <h2 class="name" data-sr="enter left move <%= @fadeDistance %> over <%= @fadeTime %>">Crook & Baker</h2>
-  <p class="slogan" data-sr="enter right move <%= @fadeDistance %> over <%= @fadeTime %>">
-    We Know Digital
-  </p>
+  <h2 class="name" data-sr="enter bottom move <%= @fadeDistance %> over <%= @fadeTime %>">
+    Crook and Baker is a creative and digital agency that harnesses culture to attract audiences.
+  </h2>
 </div>
