--- a/app/assets/stylesheets/global/_variables.scss
+++ b/app/assets/stylesheets/global/_variables.scss
@@ -8,7 +8,11 @@ body {
   width: 100%;
 }
 
-@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,500);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,100,300,600);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300);
+
+// @import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+// @import url(http://fonts.googleapis.com/css?family=Libre+Baskerville);
 
 // @font-face {
 //   font-family: 'Weather Icons';
