--- a/app/assets/stylesheets/pages/main_pages/_home.scss
+++ b/app/assets/stylesheets/pages/main_pages/_home.scss
@@ -7,13 +7,14 @@
   width: 100%;
   .name {
     display: block;
+    font-family: $font-family-serif;
     font-size: 4rem;
     font-weight: 500;
     letter-spacing: -3px;
     line-height: 0.9;
     margin: 0;
     margin-bottom: 3rem;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     vertical-align: top;
   }
   .tenets {
@@ -47,9 +48,10 @@
   .company-heading {
     height: 18rem;
     margin-top: -9rem;
-    top: 30%;
+    top: 40%;
     .name {
-      font-size: 10rem;
+      font-size: 5rem;
+      padding: 0 12rem;
     }
     .tenets {
       display: inline-block;
