--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -6,9 +6,9 @@
   <li><%= link_to "Thoughts", "#" %></li>
 </ul>
 <nav>
-  <div class="logo-container" data-sr="enter left move 0 over <%= @fadeTime %>">
+  <div class="logo-container">
     <%= link_to "#" do %>
-      <h1 class="logo">C&B</h1>
+      <h1 class="logo"></h1>
     <% end %>
   </div>
   <button class="menu-button">
