--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -14,23 +14,26 @@ nav {
   width: 100%;
   .logo-container {
     display: inline-block;
+    text-align: center;
     .logo {
-      background-color: $primary-color;
-      border: 3px solid white;
-      border-radius: 1px;
-      box-shadow: 0 0 0 3px $primary-color;
+      @include three-box-logo($dimension: 4rem, $color: $primary-color);
+      // background-color: $primary-color;
+      // border: 3px solid white;
+      // border-radius: 1px;
+      // box-shadow: 0 0 0 3px $primary-color;
+      // border-color: black;
       display: inline-block;
-      font-family: $font-family-sans-serif;
-      font-size: 5rem;
-      font-weight: 600;
-      height: 4rem;
-      line-height: 1;
-      padding: 0.3rem 0.5rem 0 0.5rem;
-      transition: all 0.2s;
-      width: 4rem;
-      &:hover {
-        border-width: 6px;
-      }
+      // font-family: $font-family-sans-serif;
+      // font-size: 5rem;
+      // font-weight: 600;
+      // height: 4rem;
+      // line-height: 1;
+      // padding: 0.3rem 0.5rem 0 0.5rem;
+      // transition: all 0.2s;
+      // width: 4rem;
+      // &:hover {
+      //   border-width: 6px;
+      // }
     }
   }
   .menu-button {
@@ -97,7 +100,7 @@ nav {
     .directory {
       background-color: transparent;
       display: block;
-      // height: auto;
+      height: auto;
       margin-bottom: 6rem;
       padding: 0;
       padding-right: $nav-padding;
