--- a/app/views/main_pages/about.html.erb
+++ b/app/views/main_pages/about.html.erb
@@ -1,2 +1,15 @@
-<h1>MainPages#about</h1>
-<p>Find me in app/views/main_pages/about.html.erb</p>
+<div id="fullpage">
+  <div class="section">
+    <div class="name">
+      CHI
+    </div>
+    <div class="weather">
+      Sunny
+    </div>
+  </div>
+  <div class="section">
+    <div class="address">
+      530 N Lake Shore Dr.
+    </div>
+  </div>
+</div>
