--- a/app/views/main_pages/home.html.erb
+++ b/app/views/main_pages/home.html.erb
@@ -1,5 +1,5 @@
 <div class="company-heading">
   <h2 class="name" data-sr="enter bottom move <%= @fadeDistance %> over <%= @fadeTime %>">
-    Crook and Baker is a creative and digital agency that harnesses culture to attract audiences.
+    Crook and Baker is a creative agency that connects with people through digital interaction.
   </h2>
 </div>
