--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,12 @@
 
   <body>
 
-    <%= render 'shared/tile' %>
+    <%= render 'shared/navbar' %>
+    <main>
+      <div id="scrollContainer">
+        <%= render 'shared/tile' %>
+      </div>
+    </main>
 
   </body>
 </html>
