Initialize video player

--- a/app/assets/stylesheets/modules/_navbar.scss
+++ b/app/assets/stylesheets/modules/_navbar.scss
@@ -8,8 +8,8 @@ $nav-offset-padding: 2rem;
 
 nav {
   background-color: transparent;
-  display: none;
   height: $nav-mobile-height;
+  left: -20%;
   padding: 1.5rem 1.5rem;
   position: relative;
   width: 100%;
