--- a/app/assets/stylesheets/modules/_tile.scss
+++ b/app/assets/stylesheets/modules/_tile.scss
@@ -1,5 +1,5 @@
 .tile {
-  background-image: image-url('SkylineBlack2.jpg');
+  // background-image: image-url('SkylineBlack2.jpg');
   background-position: 50% 20%;
   background-size: cover;
   height: 100%;
