--- a/app/views/shared/_tile.html.erb
+++ b/app/views/shared/_tile.html.erb
@@ -1,5 +1,6 @@
-<section class="tile" style="background-image: url(<%= image_path(@picture) %>);">
+<section class="tile" style="background: white;">
   <div class="content">
+    <%= video_tag "slowBoat.mp4", id: "homeVideo" %>
   </div>
 </section>
 <section class="tile" style="background-image: url(<%= image_path('SkylineBlack2.jpg') %>);">
