--- a/app/views/shared/_tile.html.erb
+++ b/app/views/shared/_tile.html.erb
@@ -1,5 +1,5 @@
 <section class="tile" style="background: white;">
-  <div class="content">
+  <div class="content home">
     <%= video_tag "slowBoat.mp4", id: "homeVideo" %>
   </div>
 </section>
